04-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: magento-web
  namespace: default
spec:
  rules:
#   - host: www.cawdery.ml
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magento-web
                port: 
                  number: 80
